--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: backend
 spec:
-  replicas: 2
+  replicas: 3
   selector:
     matchLabels:
       app: backend
@@ -18,6 +18,9 @@ spec:
         - name: backend
           image: kubetest5:5000/kube-apps-backend
           imagePullPolicy: Always
+          env:
+            - name: PORT
+              value: "80"
 ---
 apiVersion: v1
 kind: Service
