--- a/backend/package.json
+++ b/backend/package.json
@@ -13,10 +13,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "express-ws": "^5.0.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/express-ws": "^3.0.5",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2"
   }
