--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/express-ws": "^3.0.5",
+    "@types/pg": "^8.11.10",
     "prettier": "^3.4.2",
     "tsx": "^4.19.2"
   }
