--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -24,6 +24,8 @@ spec:
           env:
             - name: PORT
               value: "80"
+            - name: DB_HOST
+              value: postgres-svc
 ---
 apiVersion: v1
 kind: Service
