--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "express-ws": "^5.0.2",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
