--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -26,6 +26,8 @@ spec:
               value: "80"
             - name: DB_HOST
               value: postgres-svc
+            - name: REDIS_HOST
+              value: redis-svc
 ---
 apiVersion: v1
 kind: Service
