fix scheduler img

--- a/k8s/scheduler/Dockerfile
+++ b/k8s/scheduler/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.23-alpine
 
+WORKDIR /app
+
 COPY . .
 
 RUN go build -o packetloss-scheduler main.go
 
-ENTRYPOINT ["/packetloss-scheduler"]
+ENTRYPOINT ["/app/packetloss-scheduler"]
