place scheduler on control plane node

--- a/k8s/scheduler/scheduler.yaml
+++ b/k8s/scheduler/scheduler.yaml
@@ -29,6 +29,14 @@ spec:
   selector:
     matchLabels:
       app: packetloss-scheduler
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+        - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+                - kubetest2
   template:
     metadata:
       labels:
