fix single file mount

--- a/k8s/scheduler/scheduler.yaml
+++ b/k8s/scheduler/scheduler.yaml
@@ -46,7 +46,7 @@ spec:
             - --config=/app/scheduler-config.yaml
           volumeMounts:
             - name: scheduler-config
-              mountPath: /app
+              mountPath: /app/scheduler-config.yaml
               readOnly: true
       volumes:
         - name: scheduler-config
