--- a/k8s/scheduler/scheduler.yaml
+++ b/k8s/scheduler/scheduler.yaml
@@ -17,6 +17,19 @@ subjects:
     name: packetloss-scheduler
     namespace: kube-system
 ---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: packetloss-scheduler-auth-rolebinding
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: Role
+  name: extension-apiserver-authentication-reader
+subjects:
+  - kind: ServiceAccount
+    name: packetloss-scheduler
+    namespace: kube-system
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
