--- a/k8s/scheduler/scheduler.yaml
+++ b/k8s/scheduler/scheduler.yaml
@@ -25,7 +25,7 @@ metadata:
 rules:
   - apiGroups: [""]
     resources: ["configmaps"]
-    verbs: ["get"]
+    verbs: ["get", "list"]
     resourceNames: ["extension-apiserver-authentication"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
