--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: frontend
     spec:
+      schedulerName: packetloss-scheduler
       containers:
         - name: frontend
           image: kubetest5:5000/kube-apps-frontend
