--- a/k8s/scheduler/scheduler.yaml
+++ b/k8s/scheduler/scheduler.yaml
@@ -56,6 +56,7 @@ spec:
             - "--config=/app/scheduler-config.yaml"
             - "--kubeconfig=/app/admin.conf"
             - "--v=4"
+            - "--leader-elect=false"
           volumeMounts:
             - name: scheduler-config
               mountPath: /app/scheduler-config.yaml
