--- a/node-monitor/Dockerfile
+++ b/node-monitor/Dockerfile
@@ -7,4 +7,6 @@ COPY requirements.txt /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
+ENV K8S_NODE=node
+
 CMD ["python", "node-monitor.py"]
